--- a/index.html
+++ b/index.html
@@ -10,7 +10,7 @@
     <script type="text/javascript"
       src="https://maps.googleapis.com/maps/api/js?key=AIzaSyBy3AdGO6y8UoG3RO7R0TX7maMRiRVKlxo&sensor=TRUE">
     </script>
-    <script type="text/javascript" src="\scripts\getLocation.js"></script>  
+    <script type="text/javascript" src="/scripts/getLocation.js"></script>  
   </head>
   <body>
     <div id="map-canvas" style="width: 100%; height: 60%"></div>
