--- a/index.html
+++ b/index.html
@@ -1,18 +1,16 @@
 <!DOCTYPE html>
 <html>
   <head>
-    <meta name="viewport" content="initial-scale=1.0, user-scalable=no" />
-    <style type="text/css">
-      html { height: 100% }
-      body { height: 100%; margin: 0; padding: 0 }
-      #map-canvas { height: 100% }
-    </style>
-    <script type="text/javascript"
-      src="https://maps.googleapis.com/maps/api/js?key=AIzaSyBy3AdGO6y8UoG3RO7R0TX7maMRiRVKlxo&sensor=TRUE">
-    </script>
-    <script type="text/javascript" src="/scripts/getLocation.js"></script>  
+	<title>BeThere!</title>
+	<link rel="stylesheet" type="text/css" href="/stylesheets/main.css"
+	<meta name="viewport" content="initial-scale=1.0, user-scalable=no" />
+	<script type="text/javascript" src="https://maps.googleapis.com/maps/api/js?key=AIzaSyBy3AdGO6y8UoG3RO7R0TX7maMRiRVKlxo&sensor=TRUE"></script>
+	<script src="https://maps.googleapis.com/maps/api/js?v=3.exp&sensor=true&libraries=places"></script>
+	<script type="text/javascript" src="/scripts/getLocation.js"></script>  
   </head>
   <body>
-    <div id="map-canvas" style="width: 100%; height: 60%"></div>
+	<div id="nearby2"><img src="images/icons/nearby.png" onclick="center()"/></div>
+  	<input id="pac-input" class="controls" type="text" placeholder="Where do you want to be?">
+    <div id="map-canvas"></div>
   </body>
 </html>
