--- a/index.html
+++ b/index.html
@@ -6,6 +6,7 @@
 	<meta name="viewport" content="initial-scale=1.0, user-scalable=no" />
 	<script type="text/javascript" src="https://maps.googleapis.com/maps/api/js?key=AIzaSyBy3AdGO6y8UoG3RO7R0TX7maMRiRVKlxo&sensor=TRUE"></script>
 	<script src="https://maps.googleapis.com/maps/api/js?v=3.exp&sensor=true&libraries=places"></script>
+	<script src="//google-maps-utility-library-v3.googlecode.com/svn/trunk/geolocationmarker/src/geolocationmarker-compiled.js"></script>
 	<script type="text/javascript" src="/scripts/getLocation.js"></script>  
   </head>
   <body>
