--- a/index.html
+++ b/index.html
@@ -4,13 +4,13 @@
 	<title>BeThere!</title>
 	<link rel="stylesheet" type="text/css" href="/stylesheets/main.css"
 	<meta name="viewport" content="initial-scale=1.0, user-scalable=no" />
-	<script type="text/javascript" src="https://maps.googleapis.com/maps/api/js?key=AIzaSyBy3AdGO6y8UoG3RO7R0TX7maMRiRVKlxo&sensor=TRUE"></script>
-	<script src="https://maps.googleapis.com/maps/api/js?v=3.exp&sensor=true&libraries=places"></script>
+	<script type="text/javascript" src="https://maps.googleapis.com/maps/api/js?key=AIzaSyBy3AdGO6y8UoG3RO7R0TX7maMRiRVKlxo&sensor=TRUE&libraries=places"></script>
+	<script src="//google-maps-utility-library-v3.googlecode.com/svn/trunk/geolocationmarker/src/geolocationmarker-compiled.js"></script>
 	<script type="text/javascript" src="/scripts/getLocation.js"></script>  
   </head>
   <body>
-	<div id="nearby2"><img src="images/icons/nearby.png" onclick="center()"/></div>
   	<input id="pac-input" class="controls" type="text" placeholder="Where do you want to be?">
     <div id="map-canvas"></div>
+    <div id="results"</div>
   </body>
 </html>
